fixed mobile header alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,7 +139,7 @@ width: 100%;
   width: 100%;
 
 }
-.hero-banner-container .beats-solo{
+.hero-banner-container .hero-banner-small-text-top{
   font-size: 20px;
 }
 .hero-banner-container button{
@@ -770,5 +770,61 @@ margin-top: 160px;
 .btn-container{
   width: 300px;
   margin: auto;
+}
+}
+
+@media screen and (max-width:420px) {
+.hero-banner-container{
+  padding: 20px 20px;
+  height: 640px;
+  width: 100%;
+  margin:0;
+  
+
+}
+
+.hero-banner-container button{
+  margin-top: 300px;
+ 
+}
+
+.hero-banner-container h3{
+  font-size: 2rem;
+  margin-top: 4px;
+  margin-left:10px;
+}
+.hero-banner-container h1{
+  margin-top:0px;
+  font-size: 5em;
+  margin-left: 10px;
+
+  
+}
+.hero-banner-container h6{
+  
+  font-size: 4em;
+  margin-left: 10px;
+  margin-top:-20px;
+  
+}
+.hero-banner-image{
+  position: absolute;
+  top: 220px;
+  right:20px;
+  width: 350px;
+  height: 350px;
+}
+
+.footer-container{
+display:flex;
+flex-direction: column;
+
+}
+
+.footer-container .contact-phone{
+  margin-top:10px
+}
+.footer-container span{
+  display:block;
 }
 }
